# multi_file_code_editor

./: .gitignore  PLUGINS.md  README.md  analysis_options.yaml  melos.yaml
.github/workflows/: ci.yml  dart.yml  symbol_navigator_ci.yml
app/: .env.example  ARCHITECTURE.md  ARCHITECTURE_COMPLETE.md  AUDIT_REPORT.md  BUILDING.md  BUILD_RUNNER_GUIDE.md  CODE_ANALYSIS_REPORT.md  COMPLETE.md  COMPLETE_MODULES_SUMMARY.md  FEATURES_STATUS.md  FINAL_STATUS.md  MODULES_IMPROVEMENTS.md  MODULES_UPDATE_PART2.md  MVP_STATUS.md  Makefile  PRODUCTION_READINESS_PLAN.md  QUICK_START.md  README.md  RUN.md  TESTING_SUMMARY.md  UI_INTEGRATION_SUMMARY.md  pubspec.yaml
app/lib/: main.dart
app/modules/: DEPENDENCY_INJECTION.md
app/modules/dart_ide_enhancements/: README.md  pubspec.yaml
app/modules/editor_core/: pubspec.yaml
app/modules/editor_ffi/: README.md  pubspec.yaml
app/modules/editor_monaco/: README.md  pubspec.yaml
app/modules/editor_native/: Cargo.toml  README.md
app/modules/editor_native/src/: lib.rs
app/modules/editor_native/src/editor/: auto_indent.rs  bracket_matching.rs  clipboard.rs  comment_toggle.rs  cursor.rs  mod.rs  multiline_edit.rs  performance.rs  search.rs  syntax_query.rs
app/modules/editor_native/src/ffi/: mod.rs  tests.rs
app/modules/editor_native/src/renderer/: mod.rs
app/modules/git_integration/: README.md  pubspec.yaml
app/modules/git_integration/rust_wasm/: .gitignore  Cargo.toml  README.md  build.sh
app/modules/git_integration/rust_wasm/src/: lib.rs
app/modules/global_search/: README.md  pubspec.yaml
app/modules/global_search/rust/: Cargo.toml  build.sh
app/modules/global_search/rust/src/: lib.rs
app/modules/ide_presentation/: MOBX_GUIDE.md  pubspec.yaml
app/modules/js_ts_ide_enhancements/: README.md  pubspec.yaml
app/modules/lsp_application/: pubspec.yaml
app/modules/lsp_bridge/: Cargo.toml  README.md
app/modules/lsp_bridge/src/: main.rs
app/modules/lsp_bridge/src/lsp_manager/: mod.rs
app/modules/lsp_bridge/src/protocol/: mod.rs
app/modules/lsp_bridge/src/servers/: mod.rs
app/modules/lsp_domain/: pubspec.yaml
app/modules/lsp_infrastructure/: pubspec.yaml
app/modules/minimap_enhancement/: README.md  pubspec.yaml
app/modules/minimap_enhancement/rust/: .gitignore  Cargo.toml  build.sh
app/modules/minimap_enhancement/rust/src/: lib.rs
app/scripts/: dev.sh  prod.sh
docs/: BUG_FIXES_REPORT.md  BUILD_INSTRUCTIONS.md  CRITICAL_INFRASTRUCTURE_BUGS.md  FINAL_BUG_REPORT.md  PLUGIN_ARCHITECTURE.md  PLUGIN_GUIDE.md  PLUGIN_GUIDE_INDEX.md  PLUGIN_QUICK_REFERENCE.md  PLUGIN_SYSTEM_SUMMARY.md  README_PLUGIN_DOCS.md  RESEARCH_SOURCES.md  implementation-summary.md
docs/architecture/: FILE_WATCHER_ARCHITECTURE.md  GIT_INTEGRATION_ARCHITECTURE.md  IDE_MODULES_INTEGRATION.md  INTEGRATED_TERMINAL_ARCHITECTURE.md  README.md
docs/ideas/: PLUGIN_IDEAS_LIST.md
docs/implementation/: vscode-runtime-implementation-summary.md
docs/plans/: vscode-compatibility-architecture.md
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/lib/di/: service_locator.dart
example/lib/services/: monaco_service.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
examples/: README.md
examples/plugins/file_icons_wasm/: .gitignore  Cargo.toml  README.md  build.sh  example.dart  plugin.yaml
examples/plugins/file_icons_wasm/src/: lib.rs
examples/plugins/syntax_highlighter_wasm/: .gitignore  Cargo.toml  README.md  build.sh  plugin.yaml
examples/plugins/syntax_highlighter_wasm/src/: lib.rs
examples/plugins/syntax_highlighter_wasm/src/application/: mod.rs
examples/plugins/syntax_highlighter_wasm/src/application/dto/: highlight_response.rs  mod.rs  parse_request.rs
examples/plugins/syntax_highlighter_wasm/src/application/use_cases/: highlight_code.rs  mod.rs
examples/plugins/syntax_highlighter_wasm/src/domain/: mod.rs
examples/plugins/syntax_highlighter_wasm/src/domain/entities/: highlight_range.rs  mod.rs  syntax_tree.rs
examples/plugins/syntax_highlighter_wasm/src/domain/services/: highlighter.rs  mod.rs  parser.rs
examples/plugins/syntax_highlighter_wasm/src/domain/value_objects/: language.rs  mod.rs  position.rs  theme.rs
examples/plugins/syntax_highlighter_wasm/src/infrastructure/: mod.rs
examples/plugins/syntax_highlighter_wasm/src/infrastructure/memory/: allocator.rs  mod.rs
examples/plugins/syntax_highlighter_wasm/src/infrastructure/syntect/: mod.rs  syntect_highlighter.rs  syntect_parser.rs
examples/plugins/syntax_highlighter_wasm/src/infrastructure/tree_sitter/: ts_highlighter.rs  ts_parser.rs
modules/editor_core/: README.md  pubspec.yaml
modules/editor_core/lib/: editor_core.dart
modules/editor_mock/: pubspec.yaml
modules/editor_mock/lib/: editor_mock.dart
modules/editor_plugins/: pubspec.yaml
modules/editor_plugins/lib/: editor_plugins.dart
modules/editor_ui/: README.md  pubspec.yaml
modules/editor_ui/lib/: editor_ui.dart
modules/flutter_monaco_web/: pubspec.yaml
modules/multi_editor_core/: CHANGELOG.md  pubspec.yaml
modules/multi_editor_core/lib/: multi_editor_core.dart
modules/multi_editor_mock/: CHANGELOG.md  pubspec.yaml
modules/multi_editor_plugins/: CHANGELOG.md  pubspec.yaml
modules/multi_editor_plugins/lib/: multi_editor_plugins.dart
modules/multi_editor_ui/: CHANGELOG.md  pubspec.yaml
modules/multi_editor_ui/lib/: multi_editor_ui.dart
modules/plugins/multi_editor_plugin_auto_save/: CHANGELOG.md  pubspec.yaml
modules/plugins/multi_editor_plugin_base/: CHANGELOG.md  pubspec.yaml
modules/plugins/multi_editor_plugin_dart/: CHANGELOG.md  (+2 more)
modules/vscode_compatibility/: README.md  analysis_options.yaml  pubspec.yaml
modules/vscode_compatibility_example/: README.md  pubspec.yaml
(+505 files in other folders)
