[package]
name = "editor_native"
version = "0.1.0"
edition = "2021"
authors = ["Multi-Editor Team"]
description = "Native Rust code editor with LSP support - Fast, cross-platform text editing"

[lib]
name = "editor_native"
crate-type = ["cdylib", "staticlib"]  # For FFI

[dependencies]
# Text Data Structure (Rope) - O(log n) operations
ropey = "1.6"

# Syntax Highlighting (Tree-sitter)
tree-sitter = "0.20"
tree-sitter-highlight = "0.20"

# Tree-sitter language grammars
tree-sitter-rust = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-java = "0.20"
tree-sitter-go = "0.20"

# Text Rendering (cosmic-text - used in Zed)
cosmic-text = "0.10"

# GPU Rendering (wgpu)
wgpu = "0.19"
bytemuck = "1.14"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# FFI helpers
libc = "0.2"

[dev-dependencies]
criterion = "0.5"  # Benchmarks

# Note: Benchmark file commented out until benches/editor_bench.rs is created
# [[bench]]
# name = "editor_bench"
# harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1  # Faster debug builds
