[package]
name = "lsp_bridge"
version = "0.1.0"
edition = "2021"
authors = ["Multi-Editor Team"]
description = "LSP Bridge server - manages language server processes and bridges Flutter app with LSP servers"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# WebSocket server for Flutter communication
tokio-tungstenite = "0.21"

# JSON-RPC protocol
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Process management
tokio-process = "0.2"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "lsp_bridge"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
