[package]
name = "syntax_highlighter_wasm"
version = "0.1.0"
edition = "2021"
authors = ["Multi-Editor Team"]
description = "Production-grade syntax highlighter using Tree-sitter (Clean Architecture + DDD)"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Serialization - MessagePack for binary efficiency
rmp-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tree-sitter for parsing
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-json = "0.20"
tree-sitter-javascript = "0.20"

[profile.release]
opt-level = "z"     # Optimize for size (WASM binary)
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization (slower compile)
panic = "abort"     # Smaller binary (no unwinding)
strip = true        # Strip debug symbols

[profile.dev]
opt-level = 1       # Some optimization for dev
