[package]
name = "global_search_wasm"
version = "0.1.0"
edition = "2021"
authors = ["Multi-Editor Team"]
description = "High-performance global text search engine for IDE"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# Regex engine
regex = "1.10"

# Fast string search
memchr = "2.7"

# Utilities
walkdir = "2.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
# Optimize for size in WASM
opt-level = "z"
